# bitvm-bridge-contracts-solana

./: .env-example  Anchor.toml  README.md  package.json
cli/src/: index.ts  utils.ts
cli/src/commands/: initialize-bridge.ts  initialize-btc-light-client.ts  initialize.ts  submit-headers.ts  update-skip-tx-verification.ts
cli/src/utils/: index.ts  json-rpc.ts  wallet.ts
metadata/: metadata.json
programs/bitvm-bridge/: Cargo.toml
programs/bitvm-bridge-contracts-solana/: Cargo.toml
programs/bitvm-bridge-contracts-solana/src/: events.rs  lib.rs
programs/bitvm-bridge-contracts-solana/src/instructions/: burn.rs  mint.rs  mod.rs
programs/bitvm-bridge/src/: error.rs  errors.rs  events.rs  lib.rs  state.rs
programs/bitvm-bridge/src/instructions/: admin.rs  burn.rs  initialize.rs  lp.rs  mint.rs  mod.rs  transfer.rs
programs/btc-light-client/: Cargo.toml
programs/btc-light-client/src/: errors.rs  events.rs  lib.rs  state.rs  utils.rs
programs/btc-light-client/src/instructions/: create_block_hash_account.rs  initialize.rs  mod.rs  submit_headers.rs  update_min_confirmations.rs  verify_tx.rs
tests/: bitvm-bridge-contracts-solana.ts  bitvm-bridge.ts  btc-light-client.ts  btc-tx-verify.ts  utils.ts
