[package]
name = "btc-light-client"
version = "0.1.0"
description = "BTC Light Client on Solana"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "btc_light_client"

[features]
default = []
cpi = ["no-entrypoint"]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
idl-build = ["anchor-lang/idl-build"]

[dependencies]
anchor-lang = { git = "https://github.com/coral-xyz/anchor", rev = "0453672", features = [
    "init-if-needed",
] }
# Configure bitcoin crate to use no-std feature
bitcoin = { version = "0.31.0", default-features = false, features = [
    "no-std",
] }
